--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RandomTip</title>
+  <title>RandomIceBreakers</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -13,12 +13,12 @@
         <header class="navbar navbar-default" role="navigation">
     <div class="navbar-inner">
       <div class="container">
-        <div id="logo" class="navbar-brand"><%= link_to "REFRESH YOUR TODAY TIP", root_path %></div>
+        <div id="logo" class="navbar-brand"><%= link_to "Refresh Ice Breakers", root_path %></div>
         <nav class="collapse navbar-collapse navbar-ex1-collapse">
           <% if user_signed_in? %>
             <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to 'Submit new tip', new_tip_path %></li>
-              <li><%= link_to 'View my tips history', tips_path %></li>
+              <li><%= link_to 'Submit new Ice Breaker', new_tip_path %></li>
+              <li><%= link_to 'View my Ice Breakers history', tips_path %></li>
               <li><%= link_to 'Account', edit_user_registration_path %></li>
               <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
             </ul>
