--- a/app/views/tips/new.html.erb
+++ b/app/views/tips/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1>New Tip</h1>
+<h1>New Ice Breakers</h1>
 
 <%= render 'form', tip: @tip %>
 <%= link_to 'Back', welcome_index_path %>
