--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,15 @@
         <nav class="collapse navbar-collapse navbar-ex1-collapse">
           <% if user_signed_in? %>
             <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to 'Submit new Ice Breaker', new_tip_path %></li>
-              <li><%= link_to 'View my Ice Breakers history', tips_path %></li>
-              <li><%= link_to 'Account', edit_user_registration_path %></li>
-              <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+              <%# <li><%= link_to 'Submit new Ice Breaker', new_tip_path %></li>
+              <%# <li><%= link_to 'View my Ice Breakers history', tips_path %></li>
+              <%# <li><%= link_to 'Account', edit_user_registration_path %></li>
+              <%# <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
             </ul>
           <% else %>
             <ul class="nav navbar-nav pull-right">
-              <li><%= link_to 'Sign up', new_user_registration_path %></li>
-              <li><%= link_to 'Sign in', new_user_session_path %></li>
+              <%# <li><%= link_to 'Sign up', new_user_registration_path %></li>
+              <%# <li><%= link_to 'Sign in', new_user_session_path %></li>
             </ul>
           <% end %>
         
