welcome page adjusted

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Random Ice Breakers!</title>
+    <title>Random Icebreakers!</title>
   </head>
   <body>
     <div class="container">
-    <h1>Welcome to Random Ice Breakers!</h1>
+    <h4>The <strong>icebreaker</strong>  for <strong>today's</strong> coffee break is: </h4>
     <div class="text-center">
-        <p>Your <strong>Ice Breaker</strong> for <strong>today</strong> is:</p>
         <h1 class="display-3"><%= random_tip %></h1>
     </blockquote>
+    <div class="container">
+    <h6>Powered by Wellbeing Warrior</h6>
 
   </body>
 </html>
