rando icebreaker in bold

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
     <div class="container">
     <div class="text-center">
         <h4>The <strong>icebreaker</strong>  for <strong>today's</strong> coffee break is: </h4>
-        <h1 class="display-3"><%= random_tip %></h1>
+        <h1 class="display-3"><strong><%= random_tip %></strong></h1>
     </blockquote>
     <div class="container">
     <h6>Powered by Wellbeing Warrior</h6>
