--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
     <div class="navbar-inner">
       <div class="container">
         <div id="logo" class="navbar-brand"><%= link_to "Refresh Ice Breakers", root_path %></div>
+        <nav class="collapse navbar-collapse navbar-ex1-collapse">	
+          <ul class="nav navbar-nav navbar-right">	
+            <li><%= link_to 'Free Trial' %></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </header>
