--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,17 +25,25 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
+  <footer class="footer">
+    <div class="navbar navbar-default" role="navigation">
+      <div class="navbar-inner">
+        <div class="container">
+          <nav class="collapse navbar-collapse navbar-ex1-collapse">	
+            <ul class="nav navbar-nav navbar-right">
+              <small>
+                Icebreakers Powered by
+                <a href="https://www.wellbeing-warrior.com/welcome">Wellbeing Warrior</a>
+              <small>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
-<footer>
-  <footer class="footer">
-    <div class="navbar-inner">
-      <div class="container">
-        <nav class="collapse navbar-collapse navbar-ex1-collapse">	
-          <ul class="nav navbar-nav navbar-right">
-            <small>
-              Icebreakers Powered by Wellbeing Warrior
-              <a href="https://www.wellbeing-warrior.com/welcome">Wellbeing Warrior</a>
-  </footer>
-</footer>
+
+
+
 </html>
