--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <header class="navbar navbar-default" role="navigation">
     <div class="navbar-inner">
       <div class="container">
-        <div id="logo" class="navbar-brand"><%= link_to "Refresh Ice Breakers", root_path %></div>
+        <div id="logo" class="navbar-brand"><%="Ice Breakers"%></div>
         <nav class="collapse navbar-collapse navbar-ex1-collapse">	
           <ul class="nav navbar-nav navbar-right">	
             <li><a href="https://www.wellbeing-warrior.com/trial_requests/new">Wellbeing Warrior Free Trial</a></li>
