--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,9 @@
         <h4>The <strong>icebreaker</strong>  for <strong>today's</strong> coffee break is: </h4>
         <h1 class="display-3"><strong><%= random_tip %></strong></h1>
     </blockquote>
+    <div id="generate">
+      <h3><strong><%= link_to "Generate New Ice Breakers", root_path %></strong></h3>
+    </div>
   </body>
 </html>
 
