--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,12 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
-@import "bootstrap-sprockets";
 @import "bootstrap";
 
 #logo {
@@ -30,12 +27,16 @@
 }
 
 #header_text {
+	font-size: 30px;
 	color: white;
+	padding: 14px 25px;
 }
 
 
 #footer_text {
+	font-size: 12px;
 	color: white;
+	padding: 14px 25px;
 }
 
 header {
@@ -61,12 +62,11 @@ footer {
 	}
 }
 
-a {
+  a:link, a:visited {
 	color: white;
-  }
-
-a {
-	text-decoration: none !important;
+	padding: 14px 25px;
+	text-align: center;
+	text-decoration: none;
   }
 
 
