--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,24 +27,18 @@
 }
 
 #header_text {
-	font-size: 30px;
+	font-size: 15px;
+	padding: 15px 0;
 	color: white;
-	padding: 14px 25px;
 }
 
 
 #footer_text {
 	font-size: 12px;
 	color: white;
-	padding: 14px 25px;
-}
-
-header {
-	background-color: black;
 }
 
 footer {
-	background-color: black;
 	position: fixed;
 	bottom: 0;
 	left: 0;
@@ -64,8 +58,6 @@ footer {
 
   a:link, a:visited {
 	color: white;
-	padding: 14px 25px;
-	text-align: center;
 	text-decoration: none;
   }
 
