--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand">
+        <a id="ice_big" class="navbar-brand">
           Ice Breakers
-          <img src="icon_ice_breaker.png" alt="" width="30" height="24" class="d-inline-block align-top">
+          <img src="icon_ice_breaker.png" alt="" width="40" height="40" class="d-inline-block align-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
   <footer>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <div id="footer_text" class="navbar-brand"><a href="https://www.wellbeing-warrior.com/trial_requests/new">Get your free trial</a></div>
+        <div id="footer_text" class="navbar-brand"><a href="https://www.wellbeing-warrior.com/trial_requests/new">Get your free trial!</a></div>
         <div id="footer_text" class="navbar-brand"><%="@ 2021 Ice Breakers powered by "%><img src="logo_ww-lettering.svg" alt=""></div>
       </div>
     </nav>
