--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
+      <div class="container">
         <a id="ice_big" class="navbar-brand">
           Ice Breakers
           <img src="icon_ice_breaker.png" alt="" width="40" height="40" class="d-inline-block align-top">
@@ -44,7 +44,7 @@
   <%= yield %>
   <footer>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
+      <div class="container">
         <div id="footer_text" class="navbar-brand"><a href="https://www.wellbeing-warrior.com/trial_requests/new">Get your free trial!</a></div>
         <div id="footer_text" class="navbar-brand"><%="@ 2021 Ice Breakers powered by "%><img src="logo_ww-lettering.svg" alt=""></div>
       </div>
