--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
     <div class="container">
     <div class="text-center">
         <h4>The <strong>icebreaker</strong>  for <strong>today's</strong> coffee break is: </h4>
-        <h3 class="display-3"><strong><%= random_tip %></strong></h3>
+        <h3 class="display-3"><strong><%= @piqued_tip %></strong></h3>
     </blockquote>
     <div id="generate">
       <h3><strong><%= link_to "Generate New Ice Breakers", root_path %></strong></h3>
